<?xml version="1.0"?>
<package format="2">
  <name>roboMobile</name>
  <version>0.0.1</version>
  <description></description>

  <maintainer email="alex@mail.ru">Alex</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
